tests/arrays/arrays.exp
Error --------------------------------------------------------------------------------------------------- Arrays.js:10:5

Cannot call `foo` with `a[1]` bound to `x` because number [1] is incompatible with string [2].

   Arrays.js:10:5
   10| foo(a[1]);
           ^^^^

References:
   Arrays.js:7:8
    7| a[0] = 1;
              ^ [1]
   Arrays.js:4:16
    4| function foo(x:string) { }
                      ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- isarray.js:4:31

Cannot assign `array` to `problem` because read-only array type [1] is incompatible with array type [2].

   isarray.js:4:31
   4|     const problem: Array<Z> = array; // error
                                    ^^^^^

References:
   isarray.js:2:24
   2| function hmm<Z>(array: Z) {
                             ^ [1]
   isarray.js:4:20
   4|     const problem: Array<Z> = array; // error
                         ^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- isarray.js:11:31

Cannot assign `array` to `problem` because read-only array type [1] is incompatible with array type [2].

   isarray.js:11:31
   11|     const problem: Array<Z> = array; // error
                                     ^^^^^

References:
   isarray.js:9:26
    9|   function hmm<Z>(array: Z): Z  {
                                ^ [1]
   isarray.js:11:20
   11|     const problem: Array<Z> = array; // error
                          ^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- isarray.js:24:35

Cannot assign `array` to `problem` because read-only array type [1] is incompatible with array type [2].

   isarray.js:24:35
   24|     const problem: Array<mixed> = array; // error
                                         ^^^^^

References:
   isarray.js:22:21
   22| function hmm(array: mixed) {
                           ^^^^^ [1]
   isarray.js:24:20
   24|     const problem: Array<mixed> = array; // error
                          ^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- numeric_elem.js:6:1

Cannot assign `0` to `arr[day]` because `Date` [1] is not an array index.

   numeric_elem.js:6:1
   6| arr[day] = 0;
      ^^^^^^^^

References:
   numeric_elem.js:2:11
   2| var day = new Date;
                ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- numeric_elem.js:7:2

Cannot get `arr[day]` because `Date` [1] is not an array index.

   numeric_elem.js:7:2
   7| (arr[day]: string); // error: number ~> string
       ^^^^^^^^

References:
   numeric_elem.js:2:11
   2| var day = new Date;
                ^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- spread.js:44:2

Cannot cast `[...][0]` to number literal `3` because number [1] is incompatible with number literal `3` [2].

   spread.js:44:2
   44| ([...x, ...x][0] : 3); // error
        ^^^^^^^^^^^^^^^

References:
   spread.js:19:13
   19| let x = [3, 4];
                   ^ [1]
   spread.js:44:20
   44| ([...x, ...x][0] : 3); // error
                          ^ [2]


Error --------------------------------------------------------------------------------------------------- spread.js:45:2

Cannot cast `[...][1]` to number literal `4` because number [1] is incompatible with number literal `4` [2].

   spread.js:45:2
   45| ([...x, ...x][1] : 4); // error
        ^^^^^^^^^^^^^^^

References:
   spread.js:19:10
   19| let x = [3, 4];
                ^ [1]
   spread.js:45:20
   45| ([...x, ...x][1] : 4); // error
                          ^ [2]


Error --------------------------------------------------------------------------------------------------- spread.js:47:2

Cannot cast `[...][0]` to number literal `3` because:
 - number [1] is incompatible with number literal `3` [2].
 - string [3] is incompatible with number literal `3` [2].

   spread.js:47:2
   47| ([...x, ...x, ...y][0] : 3); // error
        ^^^^^^^^^^^^^^^^^^^^^

References:
   spread.js:19:13
   19| let x = [3, 4];
                   ^ [1]
   spread.js:47:26
   47| ([...x, ...x, ...y][0] : 3); // error
                                ^ [2]
   spread.js:20:13
   20| let y = [3, "a"];
                   ^^^ [3]


Error --------------------------------------------------------------------------------------------------- spread.js:48:2

Cannot cast `[...][1]` to number literal `4` because:
 - number [1] is incompatible with number literal `4` [2].
 - string [3] is incompatible with number literal `4` [2].

   spread.js:48:2
   48| ([...x, ...x, ...y][1] : 4); // error
        ^^^^^^^^^^^^^^^^^^^^^

References:
   spread.js:19:10
   19| let x = [3, 4];
                ^ [1]
   spread.js:48:26
   48| ([...x, ...x, ...y][1] : 4); // error
                                ^ [2]
   spread.js:20:13
   20| let y = [3, "a"];
                   ^^^ [3]


Error --------------------------------------------------------------------------------------------------- spread.js:49:2

Cannot cast `[...][0]` to number literal `3` because:
 - number [1] is incompatible with number literal `3` [2].
 - number [3] is incompatible with number literal `3` [2].

   spread.js:49:2
   49| ([...x, ...x, 1][0] : 3); // error
        ^^^^^^^^^^^^^^^^^^

References:
   spread.js:19:13
   19| let x = [3, 4];
                   ^ [1]
   spread.js:49:23
   49| ([...x, ...x, 1][0] : 3); // error
                             ^ [2]
   spread.js:49:15
   49| ([...x, ...x, 1][0] : 3); // error
                     ^ [3]


Error -------------------------------------------------------------------------------------------------- spread.js:64:22

Cannot assign array literal to `t2s` because array literal [1] has an arity of 3 but tuple type [2] has an arity of 4.

   spread.js:64:22
   64| let t2s: [1,2,3,4] = [...[t, t, t]]; // error tuple is only 3 long
                            ^^^^^^^^^^^^^^ [1]

References:
   spread.js:64:10
   64| let t2s: [1,2,3,4] = [...[t, t, t]]; // error tuple is only 3 long
                ^^^^^^^^^ [2]



Found 15 errors
